# podmesh

./: .dockerignore  Containerfile  Containerfile.dev  Containerfile.test  README.md  dev-requirements.txt  requirements-dev.txt  requirements-test.txt  setup.cfg
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: ci.yml
podmesh/: __init__.py  core.py  main.py  nodes.py  rpc.py
podmesh/plugins/: podman.py
tests/: conftest.py  test_hello.py  test_nodes.py  test_podmesh.py  test_rpc.py
