[metadata]
name = podmesh
version = 0.1.0
author = Sam P
license = MIT
description = Mesh networking system for podman
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages=podmesh
install_requires =
    podman
    pluggy>=0.1.0,<1.0
python_requires = >=3.6