[metadata]
name = podmesh
version = 0.0.1
author = Sam P
license = MIT
description = Mesh networking system for podman
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SamP20/podmesh
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages=podmesh
install_requires =
    podman
    attrs>=21.4,<22.0
    cattrs>=22.1,<23.0
    pyroute2
python_requires = >=3.6